--- a/Bekhteff/src/app/home-page/home-page.component.html
+++ b/Bekhteff/src/app/home-page/home-page.component.html
@@ -26,6 +26,16 @@
         </ul>
 
         <!-- Right -->
+        <li class="nav-item">
+          <a href="#" class="nav-link" target="_blank">
+            <i class="signIn">sign In</i>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link" target="_blank">
+            <i class="signUp">sign Up</i>
+          </a>
+        </li>
         <ul class="navbar-nav nav-flex-icons">
           <li class="nav-item">
             <a href="#" class="nav-link" target="_blank">
